--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <header>
             <ul>
                 <li><a href="index.html">Home.</a></li>
-                <li><a href="ejercicio1.html">Ejercicio 1.</a></li>
-                <li><a href="ejercicio2.html">Ejercicio 2.</a></li>
-                <li><a href="ejercicio3.html">Ejercicio 3.</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="ejercicio1.html">Ejercicio 1. HTML</a></li>
+                <li><a href="ejercicio2.html">Ejercicio 2. Audio video.</a></li>
+                <li><a href="ejercicio3.html">Ejercicio 3. BPG y grid.</a></li>
+                <li><a href="ejercicio4.html">Ejercicio 4. Galerias.</a></li>
                 <li><a href="#"></a></li>
             </ul>
         </header>
