--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <li><a href="ejercicio2.html">Ejercicio 2. Audio video.</a></li>
                 <li><a href="ejercicio3.html">Ejercicio 3. BPG y grid.</a></li>
                 <li><a href="ejercicio4.html">Ejercicio 4. Galerias.</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="ejercicio5.html">Ejercicio 5. Vivus js.</a></li>
+                <li><a href="ejercicio6.html">Ejercicio 6. Css Shapes.</a></li>
             </ul>
         </header>
         <footer></footer>
