--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <li><a href="ejercicio4.html">Ejercicio 4. Galerias.</a></li>
                 <li><a href="ejercicio5.html">Ejercicio 5. Vivus js.</a></li>
                 <li><a href="ejercicio6.html">Ejercicio 6. Css Shapes.</a></li>
+                <li><a href="ejercicio7.html">Ejercicio 7. Flexbox.</a></li>
+                <li><a href="ejercicio8.html">Ejercicio 8. Under construction.</a></li>
+                <li><a href="ejercicio9.html">Ejercicio 9. Parallax.</a></li>
+                <li><a href="ejercicio10.html">Ejercicio 10. Bootstrap.</a></li>
             </ul>
         </header>
         <footer></footer>
